custom incon component

--- a/src/app/pages/auth/auth.page.html
+++ b/src/app/pages/auth/auth.page.html
@@ -1,5 +1,5 @@
 <app-header title="Login"></app-header>
 
 <ion-content>
-
+  <app-custom-input icon="mail-outline"></app-custom-input>
 </ion-content>
