--- a/src/app/shared/components/custom-input/custom-input.component.html
+++ b/src/app/shared/components/custom-input/custom-input.component.html
@@ -1,3 +1,4 @@
-<p>
-  custom-input works!
-</p>
+<ion-item class="custom-input" line="none">
+  <ion-icon color="primary" *ngIf="icon" slot="start" [name]="icon"></ion-icon>
+  <ion-input type="text" placeholder="Awesome Input"></ion-input>
+</ion-item>
